--- a/fly.toml
+++ b/fly.toml
@@ -1,13 +1,20 @@
+# fly.toml app configuration file generated for webscale on 2024-07-11T15:11:27-07:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
 app = 'webscale'
 primary_region = 'lax'
 
 [build]
-  [build.args]
-    GO_VERSION = '1.21.0'
 
 [env]
   PORT = '8080'
-  discovery.type = "single-node"
+  discovery = 'map[type:single-node]'
+
+[[mounts]]
+  source = 'data'
+  destination = '/usr/share/elasticsearch/data'
 
 [http_service]
   internal_port = 8080
@@ -21,8 +28,3 @@ primary_region = 'lax'
   memory = '2gb'
   cpu_kind = 'shared'
   cpus = 1
-
-[[mounts]]
-  source = 'data'
-  destination = '/Users/aa'
-
